<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.count.phrases.MainActivity">

    <Button
        android:id="@+id/count_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:onClick="countPhrase"
        android:text="@string/countButton" />

    <EditText
        android:id="@+id/phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phrase_hint"
        android:layout_toLeftOf="@id/count_button"/>

    <TextView
        android:id="@+id/count_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phrase"
        android:layout_centerHorizontal="true"
         />

</RelativeLayout>
